# model-zoo-tts

./: .gitignore  API.md  CMakeLists.txt  NOTICE  README.md  package.xml
.github/workflows/: code-style.yml
cmake/: FetchThirdParty.cmake  cpp_pinyin.cmake  cppjieba.cmake
examples/: tts_file_demo.cpp  tts_stream_demo.cpp
include/: tts_service.h
python/: pyproject.toml  setup.py  tts_bindings.cpp
python/examples/: tts_file_demo.py  tts_stream_demo.py
python/spacemit_tts/: __init__.py  callback.py  engine.py  utils.py
src/: tts_backend_factory.cpp  tts_config.hpp  tts_engine.cpp  tts_presets.cpp  tts_types.hpp
src/audio/: audio_processor.cpp  audio_processor.hpp
src/backends/: tts_backend.hpp
src/backends/kokoro/: kokoro_backend.cpp  kokoro_backend.hpp  kokoro_model_downloader.cpp  kokoro_model_downloader.hpp  kokoro_phonemizer.cpp  kokoro_phonemizer.hpp  kokoro_voice_manager.cpp  kokoro_voice_manager.hpp
src/backends/matcha/: matcha_backend.cpp  matcha_backend.hpp  matcha_en_backend.cpp  matcha_en_backend.hpp  matcha_tts_config.hpp  matcha_zh_backend.cpp  matcha_zh_backend.hpp  matcha_zh_en_backend.cpp  matcha_zh_en_backend.hpp  tts_model_downloader.cpp  tts_model_downloader.hpp
src/text/: number_utils.cpp  number_utils.hpp  phoneme_utils.cpp  phoneme_utils.hpp  text_normalizer.cpp  text_normalizer.hpp  text_utils.cpp  text_utils.hpp  token_utils.cpp  token_utils.hpp
src/vocoder/: vocoder.cpp  vocoder.hpp
