<?xml version="1.0"?>
<package format="3">
  <name>tts</name>
  <version>0.1.0</version>
  <description>Text-to-speech synthesis using ONNX Runtime</description>
  <depend>audio</depend>
  <system_depend check="pkg-config --exists sndfile">libsndfile1-dev</system_depend>
  <system_depend check="pkg-config --exists libcurl">libcurl4-openssl-dev</system_depend>
  <system_depend check="pkg-config --exists fftw3f">libfftw3-dev</system_depend>
  <system_depend>onnxruntime</system_depend>
  <system_depend>python3-spacemit-ort</system_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
