[build-system]
requires = ["setuptools>=45", "wheel", "pybind11>=2.6"]
build-backend = "setuptools.build_meta"

[project]
name = "spacemit_tts"
version = "1.0.0"
description = "SpacemiT TTS (Text-To-Speech) Python bindings"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "muggle", email = "promuggle@gmail.com"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.19.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
keywords = ["tts", "text-to-speech", "matcha", "synthesis"]

[project.optional-dependencies]
dev = ["pytest>=6.0"]

[project.urls]
Homepage = "https://github.com/muggle/tts"

[tool.setuptools]
packages = ["spacemit_tts"]
